--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "image-promise": "^5.0.1",
+    "insert-css": "^2.0.0",
     "is-json": "^2.0.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
